# autosort

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.api  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  ENVIRONMENT.md  MODULE_DOC_TEMPLATE.md  SAAS_PATTERN.md
